overhauling code as responsive mobile-first

--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/3-build-a-product-landing-page/styles/style.css
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/3-build-a-product-landing-page/styles/style.css
@@ -2,31 +2,18 @@
 
 /* html {
 	font-size: 20px;
-} */
+}*/
+* {
+	margin: 0px;
+	padding: 0px;
+}
 body {
 	background-color: #232323;
 }
 #main {
-	display: grid;
-	grid-template-rows: 1fr 10fr;
-	grid-template-areas: 
-	"header"
-	"content"
-	"text"
-	"video"
-	"pictures"
-	"email";
 	background-color: #fcfbf9; 
 }
-#home, #about, #start, #recipe, #more {
-	background-color: #fcfbf9;
-	display: grid;
-/* FIX MIN-HEIGHT IT HIDES THE FOOTER	 */
-/* 	min-height: 50vh; */
-	max-width: 100%;
-}
 #nav-bar {
-	grid-area: header;
 	background-color: #fcfbf9;
 	padding-top: 0;
 	padding-bottom: 0;
@@ -56,14 +43,6 @@ body {
 .nav-item {
 	padding-right: 2vw !important;
 }
-.icon {
-	max-width: 7vw;
-	height: auto;
-	color: black;
-}
-.icon:hover {
-	color: red !important;
-}
 .active, .nav-click:hover {
 	background-color: transparent !important;
 	color: red !important;
@@ -76,11 +55,17 @@ body {
 .btn:hover {
 	cursor: pointer;
 }
+#home, #about, #start, #recipe, #more {
+	background-color: #fcfbf9;
+/* 	min-height: 50vh; */
+	max-width: 100%;
+/*	height: 100%;*/
+}
 .display-1, .display-4 {
 	font-family: 'Oswald', sans-serif;
 }
 #home {
-	grid-area: content;
+
 }
 #fatty {
 	font-size: 20vw;
@@ -93,7 +78,7 @@ body {
 	padding-top: 0;
 }
 .iconLg {
-	max-width: 9vw;
+	max-width: 12vw;
 	height: auto;
 }
 .iconHide {
@@ -103,93 +88,111 @@ body {
 .youText {
 	font-size: 4.5vw;
 }
-.snakeText {
+/*.snakeText {
 	font-family: 'Oswald', sans-serif;
 	display: inline;
-}
+}*/
 .sectionTitle {
 	font-size: 8vw;
 }
 #about {
-	grid-area: text;
+
 }
 #start {
-	grid-area: video;
+
+}
+#wrapper {
+	position: relative;
+	padding-bottom: 56.25%;
 }
 #video {
-	width: 900px;
-	height: 506px;
-/* 	NEED TO MAKE SURE THE VIDEO IS SCALEABLE */
-	margin-left: auto;
-	margin-right: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 #recipe {
-	grid-area: pictures;
+
 }
 .card {
 	border: none;
 	border-radius: 0;
 	background-color: transparent;
 }
-.thumb {
-	min-height: 350px;
-}
 .cardImg {
-	display: block;
+	/*display: block;*/
+	margin: auto;
+	max-width: 50%;
 	color: black;
 	opacity: 0.6;
 	border: none;
 }
 .imgCard {
-	width: 100%;
+	/*width: 100%;*/
+	margin: auto;
 	border-radius: 0;
 }
+.recipeOverlay {
+	margin: auto;
+	max-width: 50%;
+}
 .titleRec {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-family: 'Oswald', sans-serif;
+	font-size: 3rem;
+	color: black;
+}
+.cardImg:hover {
+	opacity: 0.9;
+	color: white;
+}
+.cTitle {
+	font-family: 'Oswald', sans-serif;
+}
+#more {
+
+}
+.nav-click {
+	padding-left: 3%;
+	padding-right: 3%;
+}
+.iconSocial {
+	max-width: 10vw;
+	height: auto;
+	color: black;
+}
+.cardNews {
+	background-color: transparent;
+	display: inline;
+	color: transparent;
+	width: 100%;
+}
+.cardNews:hover {
+	opacity: 0.5;
+	color: red;
+}
+.titleNews {
 	width: 100%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-family: 'Oswald', sans-serif;
-	font-size: 4rem;
-}
-.cardImg:hover, .titleRec:hover {
-	opacity: 0.9;
-	color: white;
-}
-.cardBen {
-	background-color: transparent;
-	display: inline;
-	color: transparent;
-}
-.cardBen:hover {
-	opacity: 0.5;
-	color: red;
-}
-.titleBen {
-	width: 100%;
-	position: absolute;
-	top: 45%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-family: 'Oswald', sans-serif;
 	font-size: 2rem;
 }
 .iconCardMore {
-	max-width: 200px;
-}
-.cTitle {
-	font-family: 'Oswald', sans-serif;
-}
-#more {
-	grid-area: email;
+	max-width: 100px;
 }
 #submit {
 	background-color: red;
 	font-family: 'Oswald', sans-serif;
 }
 .snakeDiet {
-	max-width: 300px;
+	max-width: 30vw;
 	height: auto;
 }
 .made {
