--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/3-build-a-product-landing-page/styles/style.css
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/3-build-a-product-landing-page/styles/style.css
@@ -1,46 +1,44 @@
-/*// Laptop & Desktop (1920 x 1080, 2560 x 1600) */
-
-/* html {
-	font-size: 20px;
-}*/
-* {
-	margin: 0px;
-	padding: 0px;
-}
-body {
+/*// iPhones -- Portrait (320 x 568, 375 x 667, 414 x 736) px */
+/*// Slim Split Screen in iPad -- Portrait & Landscape (320 x 1024, 320 x 768, 320 x 1112, 320 x 834, 375 x 1366, 375 x 1024) px */
+/*// Wide Split Screen in iPad -- Portrait (438 x 1024, 504 x 1112, 639 x 1366) px */
+/*// Split Screen in iPad -- Landscape (507 x 768, 551 x 834, 678 x 1024) px */
+/*#fatty {color: #33cccc; teal}*/
+body, footer {
 	background-color: #232323;
 }
-#home {
-	background-color: #fcfbf9; 
+#main {
+	display: flex;
+	flex-direction: column;
+	background-color: #ffffff;
+}
+#nav-bar, #start, #scRecipe, .secCard, #subscribe {
+	background-color: #fcfbf9;
 }
 #nav-bar {
-	background-color: #fcfbf9;
-	padding-top: 0;
-	padding-bottom: 0;
-	padding-right: 0;
-	padding-left: 0; 
-	width: 100%;
+	padding: 0;
+	margin: 0;
+	width: 100vw;
+	height: 9vh;
 }
 #nav-bar > a {
-	margin-left: 0;
-	margin-right: 0;
+	margin: 0;
 }
 #logo {
 	cursor: default !important;
 	padding-left: 0;
 	padding-right: 0;
 	background-color: transparent;
+	opacity: .8;
 }
 .nav-item {
-	padding-left: .25rem;
-	padding-right: .25rem;
+	padding: 0 1.75vw;
 }
-.nav-link, .nav-click {
+.nav-link {
 	background-color: transparent;
 	color: black;
 	text-transform: uppercase;
 	font-family: 'Oswald', sans-serif;
-	font-size: 3.5vh;
+	font-size: 6.25vw;
 }
 .nav-link:hover {
 	color: red;
@@ -51,11 +49,7 @@ body {
 .navbar-nav {
 	flex-direction: row;
 }
-.nav-item {
-	padding-right: 2vw !important;
-}
 .active, .nav-click:hover, .icon-click:hover {
-/*	background-color: transparent !important;*/
 	color: red !important;
 	opacity: 0.5;
 }
@@ -63,61 +57,62 @@ body {
 	max-width: 10vw;
 	height: auto;
 }
-#home {}
-#home > .card {
-	padding-top: 2.5rem;
-	padding-bottom: 1rem;
+#home {
+	background-color: #ffffff;
+}
+#home {
+	height: 90vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+.container-fluid {
+	margin: 0;
+	padding: 0;
+	overflow: hidden !important;
 }
 .display-1, .display-4 {
 	font-family: 'Oswald', sans-serif;
 }
-#cole {
-	background-color: #FFFFFF;
-	padding-bottom: 0;
-}
 #fatty {
-	font-size: 20vw;
+	font-size: 19vw;
 }
-.card-img-bottom {
-	padding-top: 0;
+#cole {
+	max-width: 100vw;
+	height: auto;
 }
 .subTextImg {
-	padding-bottom: 0;
-	padding-top: .25rem;
 	font-family: 'Oswald', sans-serif;
 	font-size: 10vw;
+	overflow-y: visible;
 }
 .subSnakeDiet {
-	margin-bottom: .5rem;
 	max-width: 45vw;
 	height: auto;
 }
-#homeArrow {
-	padding-top: 1.25rem;
+#scStart::before, #scRecipe::before {
+	display: block;
+	height: 10vh;
+	margin-top: -1vh;
+	visibility: hidden;
+	content: " ";
 }
-.iconLg {
-	max-width: 12vw;
-	height: auto;
+#start {
+	height: 82vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
-#start, #recipe, #subscribe {
-	background-color: #fcfbf9;
-/* 	min-height: 50vh; */
-	max-width: 100%;
-}
-#start {}
 .sectionTitle {
 	font-size: 13vw;
 }
-#start > .sectionTitle {
-	padding-top: 5rem;
-	padding-bottom: 3rem;
-}
 #wrapper {
-	padding-top: 1rem;
+	overflow: hidden;
 	position: relative;
-	padding-bottom: 56.25%;
+	padding-bottom: 56.25vw;
 }
 #video {
+	display: block;
 	padding-left: auto;
 	padding-right: auto;
 	position: absolute;
@@ -127,34 +122,36 @@ body {
 	height: 100%;
 }
 #subTextVid {
-	padding-top: .25rem;
-	padding-bottom: 0;
 	font-family: 'Oswald', sans-serif;
 	font-size: 5vw;
 }
-#startArrow {
-	padding-top: .75rem;
-	padding-bottom: 3rem;
+#recipe {
+	height: 273vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
-#recipe {} 
-#recipe > .container {
-	padding-top: 3rem;
+#recipe, .firstCard, .thirdCard {
+	background-color: #ffffff;
 }
-#recipe > .container > .sectionTitle {
-	padding-top: 1.5rem;
-	padding-bottom: 1rem;
+#recTitle {
+	min-height: 19vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
-#recipe > .row > .card {
-	padding-left: 0;
-	padding-right: 0;
+.firstCard {
+	height: 70vh;
 }
 .card {
+	margin: 0 auto !important;
 	border: none;
 	border-radius: 0;
 	background-color: transparent;
+	display: block !important;
+	flex: none !important;
 }
 .cardImg {
-	/*display: block;*/
 	margin: auto;
 	max-width: 50%;
 	color: black;
@@ -163,10 +160,8 @@ body {
 }
 .cardImg:hover {
 	opacity: 0.9;
-	color: white;
 }
 .imgCard {
-	/*width: 100%;*/
 	margin: auto;
 	border-radius: 0;
 }
@@ -180,39 +175,44 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-family: 'Oswald', sans-serif;
-	font-size: 2rem;
+	font-size: 10vw;
 	color: black;
 }
-#recipe > .row > .card > .card-body {
-	margin-bottom: 0;
-	padding-bottom: .25rem;
+.cardImg:hover .titleRec {
+	color: white;
+	text-shadow: -1px -1px 0 #666, 1px -1px 0 #666, -1px 1px 0 #666, 1px 1px 0 #666;
 }
 .cTitle {
 	font-family: 'Oswald', sans-serif;
+	font-size: 6vw;
 }
-#subscribeArrow {
-	margin-top: 0;
-	margin-bottom: 0;
-	padding-top: 0;
-	padding-bottom: 0;
+.card-body {
+	flex: 0;
 }
-#subscribe {}
-#subscribe > .container {
-	padding-top: 3rem;
-	padding-bottom: 2rem;
+.secCard, .thirdCard {
+	height: 91vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
-#subscribe > .container > h3 {
-	padding-top: 0;
+#subscribe {
+	height: 72vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
-#subscribe > div > #form > .form-group {
-	padding-bottom: 1rem;
+#subBox {
+	max-width: 90vw;
+	margin: 0 auto;
 }
-#subscribe > div > #form > .form-group > label {
-	padding-bottom: 2rem;
+#emailBox {
+	min-height: 35vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
-#subscribe > div > #form > .form-group > div {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+#email {
+	flex: 0;
 }
 .btn:hover {
 	cursor: pointer;
@@ -221,64 +221,457 @@ body {
 	background-color: red;
 	font-family: 'Oswald', sans-serif;
 }
-#subscribe > .col-xl {
-	padding-bottom: 1rem;
+#iconBox {
+	max-width: 65vw;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
 }
-#subscribe > .col-xl > .container {
-	padding: .5rem;
+.iconSocial {
+	max-width: 10vw;
 }
-#subscribe > .col-xl > .container > .icon-click {
-	padding-left: .5rem;
-	padding-right: .5rem;
-}
-/*.cardNews {
-	background-color: transparent;
-	display: inline;
-	color: transparent;
-	width: 100%;
-}
-.cardNews:hover {
-	opacity: 0.5;
-	color: red;
-}
-.titleNews {
-	width: 100%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-family: 'Oswald', sans-serif;
-	font-size: 2rem;
-}
-.iconCardMore {
-	max-width: 100px;
-}*/
 .footer {
-	padding: 1rem 0 0;
-	margin-left: .25rem;
-	margin-right: .25rem;
+	height: 19vh;
+	padding: 1vh 0;
+	margin: 0;
+	line-height: 1.5;
 }
-.footer > .col-md > p {
-	margin-bottom: .25rem;
+.footer > .col {
+	align-self: center;
+}
+#leftFoot {
+	padding: 0 0 0 1vw;
+	text-align: left;
+}
+#snakeFoot {
+	padding: 0;
+}
+#rightFoot {
+	padding: 0 1vw 0 0;
+	text-align: right;
+}
+.footer > .col > p {
+	padding: 0;
+	margin-bottom: 0;
 }
 .snakeDiet {
-	margin-bottom: .25rem;
 	max-width: 30vw;
 	height: auto;
+}
+.oi {
+	padding-top: 0;
 }
 .made {
 	color: white;
 	font-family: 'Oswald', sans-serif;
+	line-height: 1;
 }
 footer a:hover {
 	color: white;
 	text-decoration: none;
 }
-.icon-click {
-	background-color: transparent;
-}
-.iconSocial {
-	max-width: 10vw;
-	height: auto;
+
+/*// iPad -- Portrait (768 x 1024, 834 x 1112, 1024 x 1366) px */
+/*// Wide Split Screen in iPad -- Landscape (694 x 768, 782 x 834, 981 x 1024) px */
+@media screen and (min-aspect-ratio: 2/3) and (max-aspect-ratio: 1/1) {
+	/*#fatty {color: #99ffcc; sea foam}*/
+	.nav-link {
+		font-size: 5vw;
+	}
+	#home {
+		padding-top: 9vh;
+	}
+	#fatty {
+		font-size: 15vw;
+	}
+	.subTextImg {
+		font-size: 7vw;
+	}
+	.subSnakeDiet {
+		max-width: 29vw;
+		margin-bottom: 1rem;
+	}
+	.sectionTitle {
+		font-size: 10vw;
+	}
+	#subTextVid {
+		font-size: 4vw;
+	}
+	#recipe {
+		height: 277vh;
+		justify-content: flex-start;
+	}
+	#firstCard {
+		height: 72vh;
+	}
+	#recTitle {
+		margin-top: 0;
+		height: 10vh;
+	}
+	.titleRec {
+		font-size: 8vw;
+	}
+	.cTitle {
+		font-size: 4vw;
+	}
+	.card-body > .card-text {
+		font-size: 3.25vw;
+	}
+	#subBox {
+		max-width: 50vw;
+	}
+	#emailBox, #email {
+		font-size: 3.25vw;
+	}
+	#email {
+		flex: 0;
+	}
+	#submit {
+		font-size: 4vw !important;
+	}
+	#iconBox {
+		max-width: 75vw;
+	}
+	.iconSocial {
+		max-width: 8vw;
+	}
+	.footer {
+		font-size: 3vw;
+	}
+	.oi {
+		font-size: 2.5vw;
+	}
+	.snakeDiet {
+		max-width: 25vw;
+	}
 }
 
+/*// iPad -- Landscape (1024 x 768, 1112 x 834, 1366 x 1024) px */
+/*// Small, Large Desktop (1024 x 720 2560 x 1600) px */
+@media screen and (min-aspect-ratio: 1/1) and (max-aspect-ratio: 33/20) {
+	/*#fatty {color:  #fb9084; salmon}*/
+	.nav-link {
+		font-size: 3vw;
+	}
+	#header-img {
+		max-width: 4.5vw;
+	}
+	#home {
+		padding-top: 13vh;
+		height: 92vh;
+	}
+	#fatty {
+		font-size: 10vw;
+	}
+	#cole {
+		max-width: 70vw;
+	}
+	.subTextImg {
+		font-size: 4vw;
+	}
+	.subSnakeDiet {
+		max-width: 16vw;
+		margin-bottom: 1.5vh;
+	}
+	#scStart::before, #scRecipe::before {
+		height: 10vh;
+	}
+	#start {
+		max-height: 85vh;
+	}
+	.sectionTitle {
+		font-size: 5vw;
+	}
+	#start > div > h3, #subTitle > h3 {
+		margin-top: 1vh;
+	}
+	#wrapper {
+		margin-bottom: -17vw;
+	}
+	#video {
+		margin-left: 15%;
+		width: 70%;
+		height: 70%;
+	}
+	#subTextVid {
+		font-size: 3vw;
+	}
+	#recipe {
+		height: 91vh;
+	}
+	#recTitle {
+		min-height: 13vh;
+		margin-top: 0;
+	}
+	.firstCard, .secCard, .thirdCard {
+		min-height: 0vh;
+	}
+	.cardImg {
+		max-width: 90%;
+	}
+	.titleRec {
+		font-size: 5vw;
+	}
+	.cTitle {
+		font-size: 2.25vw;
+	}
+	.card-body > .card-text {
+		font-size: 1.85vw;
+	}
+	.secCard {
+		background-color: #ffffff;
+	}
+	.secCard, .thirdCard {
+		display: block;
+	}
+	#subscribe {
+		height: 81vh;
+	}
+	#subTitle > h3 {
+		margin-bottom: 0;
+	}
+	#subBox {
+		max-width: 65vw;
+	}
+	#emailBox, #email {
+		font-size: 2.5vw;
+	}
+	#email-label, #email, #subBtn {
+		flex: 0;
+	}
+	#submit {
+		font-size: 3vw !important;
+	}
+	#subscribe > .col-xl {
+		flex: 0;
+	}
+	#iconBox {
+		max-width: 45vw;
+	}
+	.iconSocial {
+		max-width: 5vw;
+	}
+	.footer {
+		height: 10vh;
+	}
+	.footer > .col > p {
+		font-size: 2vw;
+	}
+	.oi {
+		font-size: 2vw;
+	}
+	.snakeDiet {
+		max-width: 17vw;
+	}
+}
+
+/*// iPhone SE, iPhone 8, iPhone 8 Plus -- Landscape (568 x 320, 667 x 375, 736 x 414) px */
+/*// Laptop & Desktop -- height restrict (height 678px & below) */
+@media screen and (min-aspect-ratio: 33/20) {
+	/*#fatty {color: #9999ff; purple}*/
+	#nav-bar {
+		height: 13vh;
+	}
+	.nav-link {
+		font-size: 4vw;
+	}
+	#header-img {
+		max-width: 4vw;
+	}
+	#home {
+		padding-top: 13vh;
+	}
+	#fatty {
+		font-size: 6vw;
+	}
+	#fatty, .subTextImg {
+		overflow: visible !important;
+	}
+	#cole {
+		max-width: 60vw;
+	}
+	.subTextImg {
+		font-size: 5vw;
+	}
+	.subSnakeDiet {
+		max-width: 20vw;
+		margin-bottom: 2.5vh;
+	}
+	#scStart::before, #scRecipe::before {
+		height: 13vh;
+	}
+	#start {
+		height: 87vh;
+	}
+	.sectionTitle {
+		font-size: 6vw;
+	}
+	#wrapper {
+		margin-bottom: -23vw;
+	}
+	#video {
+		margin-left: 20%;
+		width: 60%;
+		height: 60%;
+	}
+	#subTextVid {
+		font-size: 4vw;
+	}
+	#recipe {
+		height: auto;
+	}
+	#recTitle > h3, #subTitle > h3 {
+		margin-top: 1vh;
+	}
+	#recTitle {
+		min-height: 11vh;
+	}
+	.firstCard {
+		height: auto;
+	}
+	.cardImg {
+		max-width: 30%;
+	}
+	.titleRec {
+		font-size: 7vw;
+	}
+	.cTitle {
+		font-size: 3vw;
+	}
+	.secCard, .thirdCard {
+		height: 110vh;
+	}
+	#subscribe {
+		height: 75vh;
+	}
+	#subTitle > h3 {
+		margin-bottom: 0;
+	}
+	#subBox {
+		max-width: 65vw;
+	}
+	#email {
+		flex: 0;
+	}
+	#iconBox {
+		max-width: 45vw;
+	}
+	.iconSocial {
+		max-width: 6vw;
+	}
+	.footer {
+		height: 12vh;
+		font-size: 2vw;
+	}
+	.snakeDiet {
+		max-width: 17vw;
+	}
+
+	@media screen and (min-width: 1000px) {
+		/*#fatty {color: #ff99bb; pink}*/
+		#nav-bar {
+			height: 10vh;
+		}
+		.nav-link, .nav-click {
+			font-size: 3vw;
+		}
+		#header-img {
+			max-width: 4vw;
+		}
+		#home {
+			max-height: 100vh;
+		}
+		#cole {
+			max-width: 55vw;
+		}
+		.subTextImg {
+			font-size: 3.5vw;
+		}
+		.subSnakeDiet {
+			max-width: 14vw;
+			margin-bottom: 2vh;
+		}
+		#scStart::before, #scRecipe::before {
+			height: 10vh;
+		}
+		#start {
+			max-height: 90vh;
+		}
+		.sectionTitle {
+			font-size: 3.5vw;
+		}
+		#wrapper {
+			margin-bottom: -27vw;
+		}
+		#video {
+			margin-left: 25%;
+			width: 50%;
+			height: 50%;
+		}
+		#subTextVid {
+			font-size: 2.5vw;
+		}
+		#recipe {
+			height: 91vh;
+		}
+		#recTitle > h3, #subTitle > h3 {
+			margin-top: 1vh;
+		}
+		#recTitle {
+			height: auto;
+		}
+		.firstCard, .secCard, .thirdCard {
+			min-height: 0vh;
+		}
+		.cardImg {
+			max-width: 55%;
+		}
+		.titleRec {
+			font-size: 4vw;
+		}
+		.cTitle {
+			font-size: 2vw;
+		}
+		.card-body > .card-text {
+			font-size: 1.5vw;
+		}
+		.secCard {
+			background-color: #ffffff;
+		}
+		.secCard, .thirdCard {
+			display: block;
+		}
+		#subscribe {
+			height: 80vh;
+		}
+		#subBox {
+			max-width: 65vw;
+		}
+		#emailBox, #email {
+			font-size: 2vw;
+		}
+		#email-label, #email, #subBtn {
+			flex: 0;
+		}
+		#submit {
+			font-size: 2vw !important;
+		}
+		#subscribe > .col-xl {
+			flex: 0;
+		}
+		.iconSocial {
+			max-width: 4vw;
+		}
+		.footer {
+			height: 10vh;
+			font-size: 1.75vw;
+		}
+		.oi {
+			font-size: 1.5vw;
+		}
+		.snakeDiet {
+			max-width: 17vw;
+		}
+	}
+}
