--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/styles/style.css
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/styles/style.css
@@ -87,20 +87,23 @@ input:checked + label span.oi-x {
 	line-height: 2rem;
 	height: 10vw;
 }
-.whtBtn:hover > .oi-nav, .oi-nav:hover, .icon-bot:hover  {
+.whtBtn:hover > .oi-nav, .oi-nav:hover {
 	color: #00e6b8;
 	opacity: 0.7;
 	cursor: pointer;
 }
 #welcome-section, #contact {
-	background-image: url("../images/calm-seas.jpg");
-	background-color: #fff;
+	background: #6ac7ae url("../images/calm-seas.jpg") no-repeat bottom;
 	background-size: cover;
-  	background-repeat: no-repeat;
-	background-position: bottom;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
 	background-attachment: fixed;
+	width: 100%;
+	height: 100%;
 	margin-top: 10.5vh;
 }
+
 #welcome-section {
 	padding-top: 5vh;
 	height: 85vh;
@@ -134,6 +137,10 @@ input:checked + label span.oi-x {
 .icon-bot {
 	font-size: 2rem;
 	color: #fff;
+}
+.icon-bot:hover {
+	cursor: pointer;
+	color: #00e6b8;
 }
 #projects {
 	min-height: 100vh;
@@ -225,7 +232,7 @@ input:checked + label span.oi-x {
 }
 #email-link {
 	font-size: 3rem;
-	color: #00CCCC;
+	color: #fff;
 }
 .oi-envelope-open {
 	display: none;
@@ -239,7 +246,6 @@ input:checked + label span.oi-x {
 #email-link:hover {
 	cursor: pointer;
 	color: #00e6b8;
-	/*opacity: 0.7;*/
 }
 footer {
 	background-color: #fff;
